--- a/package.json
+++ b/package.json
@@ -39,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.1.12",
+    "@types/react-bootstrap": "^0.32.29",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.4.0"
   }
 }
